# flows-for-manufacturing

./: .gitignore  README.md  pyproject.toml  requirements.txt
flows4manufacturing/common/: flows.py
flows4manufacturing/image_generation/: generation.py
notebooks/: anomaly_detection.ipynb  milling_prognosis.ipynb  milling_prognosis_mcmc.ipynb  synthetic_images.ipynb  view_simulated_data.ipynb
src/flows4manufacturing/: __init__.py
src/flows4manufacturing/anomaly_detection/: augmentations.py  autoencoder.py  data.py  deep_svdd.py  main.py  model.py  plots.py
src/flows4manufacturing/common/: experiment.py  flows.py  logger.py
src/flows4manufacturing/image_generation/: kolektor.py
src/flows4manufacturing/parameter_estimation/: bayesflow.py  estimate.py
