[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flows4manufacturing"
description = "An implementation of normalizing flows."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["deep learning", "normalizing-flows", "bayesflow"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "coloredlogs",
    "matplotlib",
    "neptune-client",
    "numpy",
    "scikit-learn",
    "scipy",
    "torch",
    "torchmetrics",
    "torchvision",
    "tqdm",
    "typing_extensions",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "flows4manufacturing._VERSION"}